add gravity jump

--- a/gravityjump.html
+++ b/gravityjump.html
@@ -8,6 +8,18 @@
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body, html { height: 100%; overflow: hidden; background: #222; position: relative; }
     canvas { display: block; margin: auto; background: linear-gradient(to top, #333, #111); }
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background: #111;
+      color: #fff;
+      text-align: center;
+      margin: 0;
+      padding: 40px;
+    }
+    h1 {
+      font-size: 2.5rem;
+      margin-bottom: 1rem;
+    }
     #restartBtn {
       position: absolute;
       left: 50%;
@@ -55,9 +67,25 @@
         background-size: cover;
     }
   </style>
+  <link rel="stylesheet" href="./css/dark.css">
 </head>
 <body>
-
+    <div id="theme-toggle-container">
+  <button id="theme-toggle" class="dark">🌙 Mode sombre</button>
+</div>
+<a href="index.html" style="
+        position: fixed;
+        bottom: 15px;
+        left: 15px;
+        background-color: #444;
+        color: white;
+        padding: 10px 15px;
+        border-radius: 5px;
+        text-decoration: none;
+        font-family: Arial, sans-serif;
+        z-index: 9999;
+    ">🏠 Menu</a>
+    <h1>🌌 Gravity Jump</h1>
 <canvas id="game"></canvas>
 <div id="mobileControls">
   <button id="leftBtn"></button>
@@ -264,5 +292,19 @@ function restartGame() {
 
 initGame();
 </script>
+    <!-- banner 468x60 -->
+    <script type="text/javascript">
+	atOptions = {
+		'key' : 'c86e387157f60d5125b9bd69ed6b7980',
+		'format' : 'iframe',
+		'height' : 60,
+		'width' : 468,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/c86e387157f60d5125b9bd69ed6b7980/invoke.js"></script>
+<script src="./js/dark.js"></script>
+<script src="./js/stealth.js"></script>
+<script src="./js/antiadblock.js"></script>
 </body>
 </html>
