--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
   <a class="game-link" href="bodge_the_squares.html">🟥 Square Dodger</a>
   <a class="game-link" href="everest.html">🗻 Extreme Climber</a>
   <a class="game-link" href="simon.html">⬟ Super Simon</a>
+  <a class="game-link" href="gravityjump.html">🌌 Gravity Jump</a>
+
 
 </div>
 
