--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
   <a class="game-link" href="everest.html">🗻 Extreme Climber</a>
   <a class="game-link" href="simon.html">⬟ Super Simon</a>
   <a class="game-link" href="gravityjump.html">🌌 Gravity Jump</a>
+  <a class="game-link" href="Click_War.html">🖱 Click War </a>
 
 
 </div>
