--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
   <a class="game-link" href="simon.html">⬟ Super Simon</a>
   <a class="game-link" href="gravityjump.html">🌌 Gravity Jump</a>
   <a class="game-link" href="Click_War.html">🖱 Click War </a>
+  <a class="game-link" href="expressquiz.html">🧠 Quiz Express</a>
 
 
 </div>
