--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
   <a class="game-link" href="gravityjump.html">🌌 Gravity Jump</a>
   <a class="game-link" href="Click_War.html">🖱 Click War </a>
   <a class="game-link" href="expressquiz.html">🧠 Quiz Express</a>
+  <a class="game-link" href="donttouchred.html">🟢 Don't Touch the Red 🔴</a>
 
 
 </div>
