--- a/donttouchred.html
+++ b/donttouchred.html
@@ -68,8 +68,24 @@
       pointer-events: none;
     }
   </style>
+  <link rel="stylesheet" href="./css/dark.css">
 </head>
 <body>
+        <div id="theme-toggle-container">
+  <button id="theme-toggle" class="dark">🌙 Mode sombre</button>
+</div>
+<a href="index.html" style="
+        position: fixed;
+        bottom: 15px;
+        left: 15px;
+        background-color: #444;
+        color: white;
+        padding: 10px 15px;
+        border-radius: 5px;
+        text-decoration: none;
+        font-family: Arial, sans-serif;
+        z-index: 9999;
+    ">🏠 Menu</a>
   <h1>🟢 Don't Touch the Red 🔴</h1>
   <div class="stats">Temps restant : <span id="time">30</span>s</div>
   <div class="stats">Score : <span id="score">0</span></div>
