--- a/ligne.html
+++ b/ligne.html
@@ -27,8 +27,24 @@
       text-align: center;
     }
   </style>
+  <link rel="stylesheet" href="./css/dark.css">
 </head>
 <body>
+     <div id="theme-toggle-container">
+  <button id="theme-toggle" class="dark">🌙 Mode sombre</button>
+</div>
+<a href="index.html" style="
+        position: fixed;
+        bottom: 15px;
+        left: 15px;
+        background-color: #444;
+        color: white;
+        padding: 10px 15px;
+        border-radius: 5px;
+        text-decoration: none;
+        font-family: Arial, sans-serif;
+        z-index: 9999;
+    ">🏠 Menu</a>
   <h1>Trace la ligne la plus droite possible</h1>
   <canvas id="canvas" width="600" height="400"></canvas>
   <div id="result">Clique et tire pour dessiner une ligne droite !</div>
@@ -116,5 +132,19 @@
       return maxDist;
     }
   </script>
+    <!-- banner 468x60 -->
+    <script type="text/javascript">
+	atOptions = {
+		'key' : 'c86e387157f60d5125b9bd69ed6b7980',
+		'format' : 'iframe',
+		'height' : 60,
+		'width' : 468,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/c86e387157f60d5125b9bd69ed6b7980/invoke.js"></script>
+<script src="./js/dark.js"></script>
+<script src="./js/stealth.js"></script>
+<script src="./js/antiadblock.js"></script>
 </body>
 </html>
