--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
   <a class="game-link" href="Click_War.html">🖱 Click War </a>
   <a class="game-link" href="expressquiz.html">🧠 Quiz Express</a>
   <a class="game-link" href="donttouchred.html">🟢 Don't Touch the Red 🔴</a>
+  <a class="game-link" href="ligne.html">🖍️ Straight Line</a>
 
 
 </div>
