--- a/bored-at-school-main/bored-at-school-main/index.html
+++ b/bored-at-school-main/bored-at-school-main/index.html
@@ -4,37 +4,26 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2810189862013244"
-     crossorigin="anonymous"></script>
-     <meta name="google-adsense-account" content="ca-pub-2810189862013244">
-</script>
+<title>🎮 Game Launcher</title>
 
   <link rel="stylesheet" href="./css/index.css">
   <link rel="stylesheet" href="./css/dark.css">
-    <title>🎮 Bored at school</title>
 </head>
-
 <body>
-
-
   <div id="theme-toggle-container">
-  <button id="theme-toggle" class="dark">🌙 Mode sombre</button>
+  <button id="theme-toggle">🌙 Mode sombre</button>
 </div>
 
-<h1>🎮 Bored at school</h1>
+<h1>🎮 Welcome to My Game Hub</h1>
 <a class="game-link" href="StartGo.html">🚦 Reaction Light</a>
 <a class="game-link" href="how_many_seconds.html">⏱️ How Many Seconds?</a>
 <a class="game-link" href="réflexes_clavier.html">⌨️ Reflex Typer</a>
-<a class="game-link" href="bodge_the_squares.html">🟥 Square Dodger</a>
-
-<div id="preview"></div>  
-<div id="hint">💡 Press <strong>F9</strong> to toggle stealth mode. Press <strong>Escape</strong> to exit it.</div>
-<label for="imgInput" class="custom-file-upload game-link">📁 Choose an image</label>
+<label for="imgInput" class="custom-file-upload">📁 Choose an image</label>
 <input accept="image/*" id="imgInput" type="file"/>
+<div id="preview"></div>
 
-
-
-<button id="howToBtn" class="game-link">ℹ️ How does stealth mode work?</button>
+<div id="hint">💡 Press <strong>F9</strong> to toggle stealth mode. Press <strong>Escape</strong> to exit it.</div>
+<button id="howToBtn">ℹ️ How does stealth mode work?</button>
 <div id="fakeOverlay"></div>
 <div id="howToOverlay">
 <h2>Stealth Mode Guide</h2>
@@ -43,7 +32,7 @@
 
 
 <button id="closeHowTo">Close</button>
-<p>1. Upload a screenshot or fake image to disguise your screen.</p><p>2. Press F9 to toggle the image on/off.</p><p>3. Press F11 to switch in fullscreen mode</p><p>4. Press Escape to return to the game.</p></div>
+<p>1. Upload a screenshot or fake image to disguise your screen.</p><p>2. Set a key (1–9) to toggle the image on/off.</p><p>3. Press Escape to return to the game.</p><p></p></div>
 <script>
     const overlay = document.getElementById('fakeOverlay');
     const imgInput = document.getElementById('imgInput');
@@ -109,7 +98,7 @@
 });
 
   </script>
-<script>
+<div style="margin: 10px 0;">Choose stealth key (1–9): <select id="keyPicker"><option value="1">1</option><option value="2">2</option><option value="3">3</option><option value="4">4</option><option value="5">5</option><option value="6">6</option><option value="7">7</option><option value="8">8</option><option value="9">9</option></select></div><script>
   const keyPicker = document.getElementById('keyPicker');
   if (keyPicker) {
     const current = localStorage.getItem('stealthKey') || '7';
@@ -119,8 +108,6 @@
     });
   }
 </script>
-
-
 <!-- AdSense Banner -->
 <div class="ad-banner">
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
@@ -131,30 +118,8 @@
        data-ad-format="auto"
        data-full-width-responsive="true"></ins>
   <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
-
-
-</div>
   <script src="./js/dark.js"></script>
-<script type="text/javascript">
-	atOptions = {
-		'key' : 'c86e387157f60d5125b9bd69ed6b7980',
-		'format' : 'iframe',
-		'height' : 60,
-		'width' : 468,
-		'params' : {}
-	};
-</script>
-<script type="text/javascript" src="//www.highperformanceformat.com/c86e387157f60d5125b9bd69ed6b7980/invoke.js"></script>
-<script type="text/javascript">
-	atOptions = {
-		'key' : 'cfda0322c19803b8d20336dbcfd5a7a3',
-		'format' : 'iframe',
-		'height' : 90,
-		'width' : 728,
-		'params' : {}
-	};
-</script>
-<script type="text/javascript" src="//www.highperformanceformat.com/cfda0322c19803b8d20336dbcfd5a7a3/invoke.js"></script>
-<script src="./js/antiadblock.js"></script>
+</div>
+
 </body>
 </html>
