--- a/bored-at-school-main/bored-at-school-main/réflexes_clavier.html
+++ b/bored-at-school-main/bored-at-school-main/réflexes_clavier.html
@@ -7,9 +7,7 @@
   </title>
   <link rel="stylesheet" href="./css/reflexes_clavier.css">
   <link rel="stylesheet" href="./css/dark.css">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2810189862013244"
-     crossorigin="anonymous"></script>
-     <meta name="google-adsense-account" content="ca-pub-2810189862013244">
+
 </head>
 <body>
 
@@ -29,8 +27,8 @@
 
     
     
-  <div id="theme-toggle-container">
-  <button id="theme-toggle" class="dark">🌙 Mode sombre</button>
+    <div id="theme-toggle-container">
+  <button id="theme-toggle">🌙 Mode sombre</button>
 </div>
 <h1>
    ⌨️ Reflex Typer
@@ -62,9 +60,6 @@
     Replay
    </button>
 </div>
-<input type="text" id="mobileInput" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" style="opacity:0; position:absolute; z-index:-1;">
-
-<script src="./js/antiadblock.js"></script>
   <script>
   const letters = 'abcdefghijklmnopqrstuvwxyz'.split('');
   const letterDiv = document.getElementById('letter');
@@ -140,10 +135,6 @@ function resetGame() {
   summaryDiv.style.display = 'none';
   scoreDiv.textContent = 'Score: 0';
 
-  // 👉 Force l'affichage du clavier mobile
-  const mobileInput = document.getElementById('mobileInput');
-  mobileInput.focus();
-
   let count = 3;
   letterDiv.textContent = count;
   letterDiv.classList.remove('flash');
@@ -165,30 +156,26 @@ function resetGame() {
 }
 
 
+  document.addEventListener('keydown', (e) => {
+    if (!isGameActive || summaryDiv.style.display === 'block') return;
 
-  document.getElementById('mobileInput').addEventListener('input', (e) => {
-  const key = e.target.value.toLowerCase();
-  e.target.value = ''; // Reset le champ pour taper la prochaine lettre
-
-  if (!isGameActive || summaryDiv.style.display === 'block') return;
-
-  if (key === currentLetter) {
-    const reactionTime = Date.now() - startTime;
-    if (reactionTime <= 2000) {
-      score++;
-      reactionTimes.push(reactionTime);
-      scoreDiv.textContent = `Score: ${score}`;
+    const key = e.key.toLowerCase();
+    if (key === currentLetter) {
+      const reactionTime = Date.now() - startTime;
+      if (reactionTime <= 2000) {
+        score++;
+        reactionTimes.push(reactionTime);
+        scoreDiv.textContent = `Score: ${score}`;
+        clearTimeout(timer);
+        showNewLetter();
+      }
+    } else if (letters.includes(key)) {
+      isGameActive = false;
       clearTimeout(timer);
-      showNewLetter();
+      letterDiv.textContent = 'Wrong key!';
+      setTimeout(finishGame, 1000);
     }
-  } else if (letters.includes(key)) {
-    isGameActive = false;
-    clearTimeout(timer);
-    letterDiv.textContent = 'Wrong key!';
-    setTimeout(finishGame, 1000);
-  }
-});
-
+  });
 
   startBtn.addEventListener('click', () => {
     startBtn.style.display = 'none';
@@ -204,7 +191,6 @@ function resetGame() {
     resetGame();
   });
 
-  
 
   </script>
   <script>
@@ -218,15 +204,5 @@ function resetGame() {
 
   <!-- // dark mode -->
   <script src="./js/dark.js"></script>
-<script type="text/javascript">
-	atOptions = {
-		'key' : 'c86e387157f60d5125b9bd69ed6b7980',
-		'format' : 'iframe',
-		'height' : 60,
-		'width' : 468,
-		'params' : {}
-	};
-</script>
-<script type="text/javascript" src="//www.highperformanceformat.com/c86e387157f60d5125b9bd69ed6b7980/invoke.js"></script>
 </body>
 </html>
